Pagination does not work on ios fix. (#142)

--- a/src/widget/css/general.css
+++ b/src/widget/css/general.css
@@ -28,6 +28,15 @@
     overscroll-behavior: contain;
 }
 
+.list-scrolling-container-pagination-trigger-element {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+}
+
 #detailView {
     position: fixed;
     top: 0;
